# Smart-Delivery-App_MiniProject-C

.github/workflows/: CI.yml  CodeQuality Dynamic.yml  Code_Quality static_code CPP_check.yml  gitinspector.yml  main.yml  unity.yml
2_Architecture/structure Diagrams/: README.md
3_Implementation/: CMakeLists.txt  main.cpp  mqtt_subscribe.cpp
3_Implementation/inc/: mqtt_subscriber_helper.h  smart_delivery.h
3_Implementation/src/: Food.c  Food.cpp  account_check.c  account_check.cpp  aes.cpp  cart_order_confirmation.c  cart_order_confirmation.cpp  database.csv  location.c  location.cpp  login_signup.c  login_signup.cpp  medicine.c  medicine.cpp  mqtt_subscriber_helper.cpp  otpauthentication.cpp  validate.cpp
3_Implementation/test/: test_sda.c
4_TestPlanAndOutput/: README.md
6_ImagesAndVideos/: README.md
MiniProject_C/: README.md
MiniProject_C/1_Requirements/: README.md
MiniProject_C/2_Architecture/: README.md
MiniProject_C/2_Architecture/behavior Diagrams/: README.md
MiniProject_C/3_IMPLEMENTATION/: makefile
MiniProject_C/3_IMPLEMENTATION/inc/: smart_delivery.h
MiniProject_C/3_IMPLEMENTATION/src/: Food.c  account_check.c  cart_order_confirmation.c  database.csv  location.c  login_signup.c  medicine.c  otpauthentication.c  validate.c
MiniProject_C/3_IMPLEMENTATION/test/: test_sda.c
